; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/extrac32/extr_extrac32.c_create_target_directory.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/extrac32/extr_extrac32.c_create_target_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@ERROR_ALREADY_EXISTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Can't create directory: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @create_target_directory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_target_directory(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* @MAX_PATH, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i32, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @strcpyW(i32* %9, i32 %10)
  %12 = call i64* @PathFindFileNameW(i32* %9)
  store i64 0, i64* %12, align 8
  %13 = call i32 @PathIsDirectoryW(i32* %9)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %28, label %15

15:                                               ; preds = %1
  %16 = call i32 @SHCreateDirectoryExW(i32* null, i32* %9, i32* null)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @ERROR_SUCCESS, align 4
  %19 = icmp ne i32 %17, %18
  br i1 %19, label %20, label %27

20:                                               ; preds = %15
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @ERROR_ALREADY_EXISTS, align 4
  %23 = icmp ne i32 %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = call i32 @wine_dbgstr_w(i32* %9)
  %26 = call i32 @WINE_ERR(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %24, %20, %15
  br label %28

28:                                               ; preds = %27, %1
  %29 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %29)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strcpyW(i32*, i32) #2

declare dso_local i64* @PathFindFileNameW(i32*) #2

declare dso_local i32 @PathIsDirectoryW(i32*) #2

declare dso_local i32 @SHCreateDirectoryExW(i32*, i32*, i32*) #2

declare dso_local i32 @WINE_ERR(i8*, i32) #2

declare dso_local i32 @wine_dbgstr_w(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
